# py-scale-codec

./: .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: deploypypi.yml  unittests.yml
docs/: base.html  block.html  constants.html  examples.md  exceptions.html  index.html  index.md  metadata.html  types.html  updater.html
docs/reference/: base.md  type_registry.md  types.md
docs/type_registry/: index.html
docs/utils/: index.html  math.html  ss58.html
examples/: index.html
reference/: index.html
reference/base/: index.html
reference/type_registry/: index.html
reference/types/: index.html
scalecodec/: __init__.py  base.py  block.py  constants.py  exceptions.py  metadata.py  types.py  updater.py
scalecodec/migrations/: runtime_calls.py
scalecodec/type_registry/: __init__.py  acala.json  alexander.json  canvas.json  centrifuge.json  convert_to_types.py  core.json  crust.json  darwinia.json  default.json  karura.json  (+19 more)
search/: search_index.json
test/: __init__.py  fixtures.py  test_array.py  test_bitvec.py  test_boolean.py  test_bytes.py  test_compact.py  test_enum.py  test_extrinsic.py  test_extrinsic_payload.py  test_float.py  test_hashmap.py  test_integer.py  test_metadata.py  test_option.py  test_runtime_configuration.py  test_scale_info.py  test_scale_primitives.py  test_scale_type_info.py  test_scale_types.py  test_scalebytes.py  test_ss58.py  test_string.py  test_struct.py  test_tuple.py  test_type_encoding.py  test_type_registry.py  test_vec.py
(+9 files in other folders)
